--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "mjari",
-  "name": "Mehul Jariwala site",
+  "short_name": "harish",
+  "name": "Harish Tatikonda site",
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "browser",
