fix: added monunika site

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "harish",
-  "name": "Harish Tatikonda site",
+  "short_name": "Mounika P",
+  "name": "Mounika P site",
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "browser",
